--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -67,11 +67,18 @@ body {
 .secondDiv{
     left: 0;
     width: 100%;
+    height: 41px;
     padding-left: 10px;
     padding-right: 20px;
     display: flex;
+    flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(255, 255, 255);
+}
+
+.secondDiv h2{
+    margin: 0;
 }
 
 .logo{
@@ -90,15 +97,31 @@ body {
     color: black;
     text-decoration: none;
     margin-left: 40px;
+    cursor: pointer; 
+    float: left;
+    display: block;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    border-left: 1px solid rgb(255, 255, 255);
+}
+
+#buyNow{
+    background-color: brown;
+}
+
+#searchBt{
+    background-color: black;
+    color: #fff;
 }
 
 .navigation a::after{
     content: '';
     position: absolute;
     left: 0;
-    bottom: -6px;
+    bottom: 2px;
     width: 100%;
-    height:3px;
+    height:4px;
     background: linear-gradient(
         to left, rgb(253, 2, 253), orange
     );
@@ -118,13 +141,27 @@ body {
     background-repeat: no-repeat;
     height: 470px;
     background-size: cover;
-    margin: 0;
+    display: flex;
+    margin: 0%;
 }
 
-.thirdImage div{
-    text-align: match-parent;
-    margin-left: 10%;
-    border-left: 5px solid black;
+.con{
+    margin-left: 25%;
+    margin-top: 10%;
+    margin-bottom: 17%;
+    border-left: 5px solid rgb(229, 84, 84);
+    border-radius: 5px;
+}
+
+.con div{
+    margin-left: 10px;
+}
+
+.thirdImage button:hover{
+    background: linear-gradient(
+        to left, rgb(255, 238, 0), rgb(140, 255, 0)
+    );
+    color: black;
 }
 
 .fourthDi {
@@ -142,12 +179,46 @@ body {
     margin-left: 7%;
 }
 
+.fourthDi button{
+    background: transparent;
+    margin-top: 10%;
+    float: inherit;
+
+}
+
+.fourthDi button:hover{
+    background: linear-gradient(
+        to left, rgb(255, 238, 0), rgb(140, 255, 0)
+    ); 
+}
+
 .fifthDiv{
     background-image: url('img/world.jpg');
     background-repeat: no-repeat;
     height: 470px;
     background-size: cover;
-    margin: 0;
+    margin-left: 4%;
+    position: relative;
+}
+
+.fifthDiv p{
+    font-size: 20px;
+    margin: 1%;
+}
+
+.fifthDiv img{
+    top: 1%;
+    right: 5%;
+    width: 29%;
+    position: absolute;
+    height: fit-content;
+}
+
+.fifthDiv button:hover{
+    background: linear-gradient(
+        to left, rgb(255, 238, 0), rgb(140, 255, 0)
+    );
+    color: black;
 }
 
 .sixthDiv{
@@ -155,7 +226,37 @@ body {
     background-repeat: no-repeat;
     height: 470px;
     background-size: cover;
-    margin: 0;
+    margin: 4%;
+}
+
+.sixthDiv div{
+    display: flex;
+}
+
+.polaroid {
+    width: 40%;
+    height: 40%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
+    margin-left: 10px;
+    position: relative;
+}
+  
+.container {
+    padding-left: 20%;
+    padding-right: 10%;
+    padding-top: 4%;
+    position: absolute;
+    bottom: -5%;
+    right: -4px;
+    border-bottom-left-radius: 50px;
+    border-top-left-radius: 50px;
+    height: 17%;
+    font-size: 10px;
+    background: linear-gradient(
+        to left, rgb(253, 2, 253), orange
+    );
 }
 
 h1{
